# swagger/swagger.yml
@@ -11,7 +11,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /notificacion/:
+  /notificacion/enviar/:
     post:
       tags:
       - notificacion
@@ -27,18 +27,65 @@ paths:
           $ref: '#/definitions/models.Notificacion'
       responses:
         "201":
-          description: ""
+          description: string,Status boolean,Message string,Data map[string]interface{}}
           schema:
-            $ref: '#/definitions/map[string]interface{"Success","Status","Message","Data"}'
+            $ref: '#/definitions/map[string]interface{Success'
+        "400":
+          description: Error en parametros ingresados
+  /notificacion/suscribir/:
+    post:
+      tags:
+      - notificacion
+      description: Suscribe cualquier tipo de endpoint a un topic
+      operationId: NotificacionController.Subscribe
+      parameters:
+      - in: body
+        name: body
+        description: Body de la suscripcion
+        required: true
+        schema:
+          $ref: '#/definitions/models.Suscripcion'
+      - in: query
+        name: atributos
+        description: Atributos para filtrado de mensajes (atributo = valor, ...)
+        type: string
+      responses:
+        "201":
+          description: string,Status boolean,Message string,Data map[string]interface{}}
+          schema:
+            $ref: '#/definitions/map[string]interface{Success'
+        "400":
+          description: Error en parametros ingresados
+  /notificacion/topics/:
+    get:
+      tags:
+      - notificacion
+      description: Lista todos los ARN de los topics disponibles
+      operationId: NotificacionController.GetTopics
+      responses:
+        "201":
+          description: string,Status boolean,Message string,Data []string}
+          schema:
+            $ref: '#/definitions/map[string]interface{Success'
         "400":
           description: Error en parametros ingresados
 definitions:
-  621.0xc000259d70.false:
+  1304.0xc000334390.false:
     title: "false"
     type: object
-  map[string]interface{"Success","Status","Message","Data"}:
-    title: map[string]interface{"Success","Status","Message","Data"}
+  map[string]interface{Success:
+    title: map[string]interface{Success
     type: object
+  models.Endpoint:
+    title: Endpoint
+    type: object
+    properties:
+      Endpoint:
+        type: string
+      Id:
+        type: string
+      Protocolo:
+        type: string
   models.Notificacion:
     title: Notificacion
     type: object
@@ -48,7 +95,7 @@ definitions:
       Asunto:
         type: string
       Atributos:
-        $ref: '#/definitions/621.0xc000259d70.false'
+        $ref: '#/definitions/1304.0xc000334390.false'
       DestinatarioId:
         type: array
         items:
@@ -57,6 +104,16 @@ definitions:
         type: string
       RemitenteId:
         type: string
+  models.Suscripcion:
+    title: Suscripcion
+    type: object
+    properties:
+      ArnTopic:
+        type: string
+      Suscritos:
+        type: array
+        items:
+          $ref: '#/definitions/models.Endpoint'
 tags:
 - name: notificacion
   description: |
